# claude-meister

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVIATIONS.md  LICENSE  README.md  SHIP.md  install.py  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: plugin-validate.yml
docs/: LAUNCH_PLAYBOOK.md  MEISTER_CLI.md  VERIFY.md  architecture.md  configuration.md  quickstart.md  troubleshooting.md  wiki-pipeline-guide.md
docs/launch/: COPY_TEMPLATES.md  RELEASE_v2.0.0.md
installer/: __init__.py  claude_md.py  mcp.py  memory.py  paths.py  repo_scanner.py  runtime.py  verify.py  wiki.py
meister/: __init__.py  backfill.py  capture.py  cli.py  retrieve.py  selftest.py  session_inject.py  statusline.py  store.py  usage.py
memory/server/: cleanup.py  debate_engine.py  evolution_engine.py  failure_registry.py  intent_classifier.py  main.py  memory_retriever.py  memory_scorer.py  memory_store.py  repo_detector.py
plugins/claude-meister/: README.md
runtime/configs/: injection_rules.json
runtime/controllers/: build_tool_index.py  mcp_router.py  memory_controller.py  tool_loader.py  usage_logger.py  usage_report.py
runtime/core/: context_router.md  mode_selector.md  skill_router.md  token_budget.md
runtime/hooks/: pre_execution.md  runtime_bootstrap.md
templates/: claude_md_block.md  claude_md_block_minimal.md  runtime_config.json
tests/: test_installer.py  test_memory_server.py  test_runtime.py  test_usage_report.py
wiki/: _hot.md  _index-agent-sdk.md  _index-api.md  _index-claude-code.md  _index-enterprise.md  _index-mcp.md  _index-models.md  _index-prompting.md  _index-tools.md  index.md  log.md  overview.md
wiki/entities/: mcp.md  (+4 more)
(+15 files in other folders)
